<resources>
    <string name="app_name">Acacia Health</string>
    <string name="app_slogan">#1 Health Insurance Company in Ghana</string>
    <string name="btn_SignUp"> Sign Up </string>
    <string name="btn_SignIn">Sign In</string>
    <string name="phone_number">Phone Number</string>
    <string name="person_name">Name</string>
    <string name="person_password">Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="claim_title">Enter claim details to send to Health Provider</string>
    <string name="claim_name">Name</string>
    <string name="claim_email">Email</string>
    <string name="claim_details">Enter claim details</string>
    <string name="claim_send">Make claim</string>
    <string name="email">Email</string>
</resources>
