<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:inputType="phone"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/person_name"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:inputType="textPersonName"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/person_password"
            android:textColorHint="@android:color/black"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true"/>


    </LinearLayout>

    <info.hoang8f.widget.FButton
        android:id="@+id/btnSignUpUser"
        android:textColor="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_SignUp"
        android:layout_margin="8dp"
        android:layout_alignParentBottom="true"
        app:shadowColor="@android:color/white"
        app:fButtonColor="@color/btnSignUp"
        app:shadowEnabled="true"
        app:shadowHeight="5dp"
        app:cornerRadius="4dp" />

</RelativeLayout>