<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSlogan"
            android:gravity="center"
            android:text="@string/app_slogan"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2">

        <info.hoang8f.widget.FButton
            android:id="@+id/btnSignUp"
            android:text="@string/btn_SignUp"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:shadowColor="@android:color/black"
            app:fButtonColor="@color/btnSignUp"
            app:shadowEnabled="true"
            app:shadowHeight="5dp"
            app:cornerRadius="4dp" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btnSignIn"
            android:textColor="@android:color/white"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:text="@string/btn_SignIn"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:shadowColor="@android:color/black"
            app:fButtonColor="@color/btnSignIn"
            app:shadowEnabled="true"
            app:shadowHeight="5dp"
            app:cornerRadius="4dp" />

    </LinearLayout>

</RelativeLayout>