<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:padding="10dp">

        <!--Put form controls here-->

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/claim_title"
            android:padding="10dp"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/editTextName"
            android:layout_height="wrap_content"
            android:hint="@string/claim_name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:padding="10dp">
        </EditText>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_height="wrap_content"
            android:hint="@string/claim_email"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent"
            android:padding="10dp"
            android:layout_marginTop="10dp">
        </EditText>

        <EditText
            android:id="@+id/editTextPolicyNumber"
            android:layout_height="wrap_content"
            android:hint="Policy Number"
            android:inputType="number"
            android:layout_width="fill_parent"
            android:padding="10dp"
            android:layout_marginTop="10dp">
        </EditText>

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_height="wrap_content"
            android:hint="Phone Number"
            android:inputType="phone"
            android:layout_width="fill_parent"
            android:padding="10dp"
            android:layout_marginTop="10dp">
        </EditText>

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_height="wrap_content"
            android:hint="Address"
            android:inputType="textPostalAddress"
            android:layout_width="fill_parent"
            android:padding="10dp"
            android:layout_marginTop="10dp">
        </EditText>

        <!--<RelativeLayout
            android:layout_width="match_parent"
            android:clickable="true"
            android:onClick="setDate"
            android:id="@+id/date"
            android:padding="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:layout_height="72dp">

            <ImageView
                android:id="@+id/date_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="32dp"
                android:src="@drawable/ic_view_day_black_24dp"
                android:layout_centerVertical="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/date_icon"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/date_text"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:textSize="15dp"
                    android:layout_height="wrap_content"
                    android:text="Date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/set_date"
                    android:textSize="15dp"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:clickable="true"
            android:onClick="setTime"
            android:id="@+id/time"
            android:background="?android:attr/selectableItemBackground"
            android:layout_height="72dp">

            <ImageView
                android:id="@+id/time_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="32dp"
                android:src="@drawable/ic_access_time_black_24dp"
                android:layout_centerVertical="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/time_icon"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/time_text"
                    android:textColor="@android:color/black"
                    android:layout_width="wrap_content"
                    android:textSize="15dp"
                    android:layout_height="wrap_content"
                    android:text="Time" />

                <TextView
                    android:layout_width="wrap_content"
                    android:id="@+id/set_time"
                    android:textSize="15dp"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </RelativeLayout>-->

        <EditText
            android:id="@+id/editTextClaimDetails"
            android:layout_height="wrap_content"
            android:hint="@string/claim_details"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp">
        </EditText>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/claims_floating_action_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="11dp"
                android:layout_marginLeft="11dp"
                android:layout_marginRight="11dp"
                fab:menu_animationDelayPerItem="55"
                fab:menu_backgroundColor="@android:color/transparent"
                fab:menu_buttonSpacing="0dp"
                fab:menu_colorNormal="#da3c2f"
                fab:menu_colorPressed="#dc4b3f"
                fab:menu_colorRipple="#99d4d4d4"
                fab:menu_fab_size="normal"
                fab:menu_icon="@drawable/fab_add"
                fab:menu_labels_colorNormal="#333"
                fab:menu_labels_colorPressed="#444"
                fab:menu_labels_colorRipple="#66efecec"
                fab:menu_labels_cornerRadius="3dp"
                fab:menu_labels_ellipsize="none"
                fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
                fab:menu_labels_margin="0dp"
                fab:menu_labels_maxLines="-1"
                fab:menu_labels_padding="8dp"
                fab:menu_labels_position="left"
                fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
                fab:menu_labels_showShadow="true"
                fab:menu_labels_singleLine="false"
                fab:menu_labels_textColor="#f2f1f1"
                fab:menu_labels_textSize="15sp"
                fab:menu_openDirection="up"
                fab:menu_shadowColor="#66aff198"
                fab:menu_shadowRadius="4dp"
                fab:menu_shadowXOffset="1dp"
                fab:menu_shadowYOffset="4dp"
                fab:menu_showShadow="true">

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/claims_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_file_upload_black_24dp"
                    fab:fab_label="Upload file"
                    fab:fab_size="mini" />


            </com.github.clans.fab.FloatingActionMenu>

        </RelativeLayout>

        <Button
            android:id="@+id/btnMakeClaim"
            android:layout_height="wrap_content"
            android:text="@string/claim_send"
            android:layout_width="fill_parent"
            android:textSize="18sp">
        </Button>
    </LinearLayout>
</ScrollView>